--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,3 +14,7 @@ const today = new Date();
 <script>
   import "../scripts/menu.js";
 </script>
+<script>
+  import "lazysizes";
+  import 'lazysizes/plugins/blur-up/ls.blur-up';
+</script>
