--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -84,7 +84,7 @@ const { contents: links } = await getLinks({
         {
           categories.map((category: any) => (
             <li>
-              <HeaderLink href={`/category/${category.id}`}>
+              <HeaderLink href={`/category/${category.id}/`}>
                 {category.name}
               </HeaderLink>
             </li>
