changed about wsvebox

--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -77,16 +77,16 @@ const older = posts.contents[current_index + 1] ?? null;
     set:html={content}
   />
   <div id="wavebox" class="wavebox">
-    <p>もしこの投稿が「いいね！」と思ったら↓から拍手をください</p>
+    <p>もしこの投稿が「いいね！」と思ったら↓のWaveboxから拍手をください</p>
     <a
       href="https://wavebox.me/wave/9yprnt1ii7tatpb8/"
       target="_blank"
       rel="noopener noreferrer"
       ><img
-        width="100"
+        width="150"
         height="40"
         alt="wavebox logo"
-        src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/7ae13f9a38be4db3b40ac2166607885a/logo_symbol_black.png?fm=webp&w=100"
+        src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/7ae13f9a38be4db3b40ac2166607885a/logo_symbol_black.png?fm=webp&w=150"
       /></a
     >
   </div>
