--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ const { contents: links } = await getLinks({
       <SearchForm searchform_text_id="header_searchform_text" />
       <HeaderLink href="/feed.xml">
         <img
-          src="/rss_feed.svg"
+          src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
           alt="RSS feed"
           width="16px"
           height="16px"
