--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -22,7 +22,7 @@ const { contents: links } = await getLinks({
         <li>
           <a href="/feed.xml"
             ><img
-              src="/rss_feed.svg"
+              src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
               alt="RSS feed"
               width="16px"
               height="16px"
