--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -78,28 +78,59 @@ const {
               </span>
             )
           }
-          <a
-            href="https://twitter.com/share?ref_src=twsrc%5Etfw"
-            class="twitter-share-button"
-            data-show-count="false"
-          >
-            Tweet
-          </a>
+          <span class="tweet">
+            <a
+              href={`https://twitter.com/intent/tweet?url=${
+                Astro.request.url
+              }&text=${encodeURI(`${title}|${SITE_TITLE}`)}%0a`}
+              class="twitter-share-button"
+              data-show-count="false"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/82670814b35a441794e2f0a1dcd1d631/Twitter_icon_2.svg"
+              />Tweet
+            </a>
+          </span>
+          <span class="rss">
+            <a href="/feed.xml"
+              ><img
+                src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
+                alt="RSS feed"
+                width="16px"
+                height="16px"
+              />RSSフィード</a
+            >
+          </span>
         </div>
         <hr />
         <slot />
-        <a
-          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
-          class="twitter-share-button"
-          data-show-count="false"
-        >
-          Tweet
-        </a>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
+        <span class="tweet">
+          <a
+            href={`https://twitter.com/intent/tweet?url=${
+              Astro.request.url
+            }&text=${encodeURI(`${title}|${SITE_TITLE}`)}%0a`}
+            class="twitter-share-button"
+            data-show-count="false"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/82670814b35a441794e2f0a1dcd1d631/Twitter_icon_2.svg"
+            />Tweet
+          </a>
+        </span>
+        <span class="rss">
+          <a href="/feed.xml"
+            ><img
+              src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
+              alt="RSS feed"
+              width="16px"
+              height="16px"
+            />RSSフィード</a
+          >
+        </span>
         <nav class="newer_home_older">
           <ul>
             <li>
