--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -354,23 +354,25 @@ a:focus {
 
 
 .tweet {
-  margin: 8px;
-  background-color: #1d9bf0;
-  border-radius: 5px;
+  
 }
 .tweet a {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 20px;
   text-decoration: none;
-  color: #fff;
 }
 
-.tweet img {
-  vertical-align: middle;
-  height: 16px;
-  width: 16px;
+.tweet a img {
+  height: 20px;
+  width: 20px;
   padding: 1px;
+  background-color:#fff;
 }
 
 .rss a {
+  display: inline-block;
+  vertical-align: middle;
   margin: 8px;
 }
 
