changed about tweet button

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -83,7 +83,7 @@ const {
               href={`https://twitter.com/intent/tweet?url=${
                 Astro.request.url
               }&text=${encodeURI(`${title}|${SITE_TITLE}`)}%0a`}
-              class="twitter-share-button"
+              class="tweet_button"
               data-show-count="false"
               target="_blank"
               rel="noopener noreferrer"
@@ -112,7 +112,7 @@ const {
             href={`https://twitter.com/intent/tweet?url=${
               Astro.request.url
             }&text=${encodeURI(`${title}|${SITE_TITLE}`)}%0a`}
-            class="twitter-share-button"
+            class="tweet_button"
             data-show-count="false"
             target="_blank"
             rel="noopener noreferrer"
