fixed about rss link

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -96,7 +96,9 @@ const {
           </span>
           <span class="rss">
             <a href="/feed.xml"
-              ><img
+              target="_blank"
+              rel="noopener noreferrer"
+            ><img
                 src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
                 alt="RSS feed"
                 width="16px"
@@ -125,7 +127,9 @@ const {
         </span>
         <span class="rss">
           <a href="/feed.xml"
-            ><img
+            target="_blank"
+              rel="noopener noreferrer"
+          ><img
               src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
               alt="RSS feed"
               width="16px"
