--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,10 @@ const { contents: links } = await getLinks({
   <nav>
     <div class="nav-links">
       <SearchForm searchform_text_id="header_searchform_text" />
-      <HeaderLink href="/feed.xml">
+      <HeaderLink href="/feed.xml"
+      target="_blank"
+      rel="noopener noreferrer"
+      >
         <img
           src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
           alt="RSS feed"
