--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -21,7 +21,10 @@ const { contents: links } = await getLinks({
       <ul class="">
         <li>
           <a href="/feed.xml"
-            ><img
+            target="_blank"
+              rel="noopener noreferrer"
+          >
+          <img
               src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
               alt="RSS feed"
               width="16px"
