--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,6 +24,7 @@ const {
 <!-- Google tag (gtag.js) -->
 <script
   type="text/partytown"
+  async
   src="https://www.googletagmanager.com/gtag/js?id=G-0M4H6RV722"
 ></script>
 <script type="text/partytown">
@@ -38,6 +39,7 @@ const {
 
 <!-- Google Adsense -->
 <script
+  type="text/partytown"
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
   crossorigin="anonymous"
