add google tag manager

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,11 +18,26 @@ const {
 } = Astro.props;
 ---
 
+<!-- Google Tag Manager -->
+<script type="text/partytown">
+  (function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+    var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s),
+      dl = l != "dataLayer" ? "&l=" + l : "";
+    j.async = true;
+    j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, "script", "dataLayer", "GTM-WM9326C");
+</script>
+<!-- End Google Tag Manager -->
+
 <!-- The next line enables the indexing by robots on the page level -->
 <meta name="robots" content={robots} />
 
 <!-- Google tag (gtag.js) -->
-<script
+<!-- <script
   type="text/partytown"
   src="https://www.googletagmanager.com/gtag/js?id=G-0M4H6RV722"
 ></script>
@@ -34,7 +49,7 @@ const {
   gtag("js", new Date());
 
   gtag("config", "G-0M4H6RV722");
-</script>
+</script> -->
 
 <!-- Google Adsense -->
 <script
@@ -67,7 +82,4 @@ const {
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta
-  property="twitter:image"
-  content={image}
-/>
+<meta property="twitter:image" content={image} />
