--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,15 @@ const { contents: links } = await getLinks({
 });
 ---
 
+<!-- Google Tag Manager (noscript) -->
+<noscript
+  ><iframe
+    src="https://www.googletagmanager.com/ns.html?id=GTM-WM9326C"
+    height="0"
+    width="0"
+    style="display:none;visibility:hidden"></iframe></noscript
+>
+<!-- End Google Tag Manager (noscript) -->
 <header>
   <div class="navbar">
     <a href="/" class="">
@@ -31,10 +40,7 @@ const { contents: links } = await getLinks({
   <nav>
     <div class="nav-links">
       <SearchForm searchform_text_id="header_searchform_text" />
-      <HeaderLink href="/feed.xml"
-      target="_blank"
-      rel="noopener noreferrer"
-      >
+      <HeaderLink href="/feed.xml" target="_blank" rel="noopener noreferrer">
         <img
           src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
           alt="RSS feed"
