test gtag for google adsense

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -36,27 +36,12 @@ const {
 <!-- The next line enables the indexing by robots on the page level -->
 <meta name="robots" content={robots} />
 
-<!-- Google tag (gtag.js) -->
-<!-- <script
-  type="text/partytown"
-  src="https://www.googletagmanager.com/gtag/js?id=G-0M4H6RV722"
-></script>
-<script type="text/partytown">
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-
-  gtag("config", "G-0M4H6RV722");
-</script> -->
-
 <!-- Google Adsense -->
-<script
+<!-- <script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
   crossorigin="anonymous"
-></script>
+></script> -->
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
