--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,11 +37,11 @@ const {
 <meta name="robots" content={robots} />
 
 <!-- Google Adsense -->
-<!-- <script
+<script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
   crossorigin="anonymous"
-></script> -->
+></script>
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
