--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -59,7 +59,7 @@ const { page } = Astro.props;
       <section class="contents">
         <Posts posts={page.data} />
         <Pagination page={page} />
-        <!-- <GoogleResponsiveAd client:only="preact"/> -->
+        <GoogleResponsiveAd client:only="preact"/>
       </section>
     </main>
     <Footer />
