--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -93,7 +93,7 @@ const category = await getCategoryDetail(params.categoryId as string);
         <h1>{category.name}</h1>
         <Posts posts={page.data} />
         <Pagination page={page} categoryId={params.categoryId} />
-        <!-- <GoogleResponsiveAd client:only="preact"/> -->
+        <GoogleResponsiveAd client:only="preact"/>
       </section>
     </main>
     <Footer />
