--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,6 +38,7 @@ const {
 
 <!-- Google Adsense -->
 <script
+  type="text/partytown"
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
   crossorigin="anonymous"
