--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -71,3 +71,6 @@ const {
 
 <!-- font awesome -->
 <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css">
+
+<!-- rss feed -->
+<link rel="alternate" type="application/atom+xml" href={`https://${Astro.request.url.split('/')[2]}/feed.xml`} title="Atom">
