--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -73,4 +73,5 @@ const {
 <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css">
 
 <!-- rss feed -->
+<link rel="alternate" type="application/rss+xml" href={`https://${Astro.request.url.split('/')[2]}/feed.xml`} title="RSS2.0">
 <link rel="alternate" type="application/atom+xml" href={`https://${Astro.request.url.split('/')[2]}/feed.xml`} title="Atom">
