--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -70,7 +70,9 @@ const {
 <meta property="twitter:image" content={image} />
 
 <!-- font awesome -->
-<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css">
+<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
+<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/brands.min.css">
+<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/solid.min.css">
 
 <!-- rss feed -->
 <link rel="alternate" type="application/rss+xml" href={`https://${Astro.request.url.split('/')[2]}/feed.xml`} title="RSS2.0">
