--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,12 +41,7 @@ const { contents: links } = await getLinks({
     <div class="nav-links">
       <SearchForm searchform_text_id="header_searchform_text" />
       <HeaderLink href="/feed.xml" target="_blank" rel="noopener noreferrer">
-        <img
-          src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
-          alt="RSS feed"
-          width="16px"
-          height="16px"
-        />RSSフィード
+        <i class="fa-solid fa-rss"></i>RSSフィード
       </HeaderLink>
       <HeaderLink href="/about">プライバシーポリシー</HeaderLink>
       {
