--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -24,12 +24,7 @@ const { contents: links } = await getLinks({
             target="_blank"
               rel="noopener noreferrer"
           >
-          <img
-              src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
-              alt="RSS feed"
-              width="16px"
-              height="16px"
-            />RSSフィード</a>
+          <i class="fa-solid fa-rss"></i>RSSフィード</a>
         </li>
         <li><a href="/about">プライバシーポリシー</a></li>
         {
