--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -88,6 +88,7 @@ const {
               data-show-count="false"
               target="_blank"
               rel="noopener noreferrer"
+              aria-label="Twitter"
             >
               <i class="fab fa-twitter"></i>
             </a>
@@ -98,6 +99,7 @@ const {
               class="facebook_button"
               target="_blank"
               rel="noopener noreferrer"
+              aria-label="Facebook"
             >
               <i class="fa-brands fa-facebook"></i>
             </a>
@@ -108,6 +110,7 @@ const {
               class="line_button"
               target="_blank"
               rel="noopener noreferrer"
+              aria-label="LINE"
             >
               <i class="fa-brands fa-line"></i>
             </a>
@@ -118,6 +121,7 @@ const {
               class="pocket_button"
               target="_blank"
               rel="noopener noreferrer"
+              aria-label="Pocket"
             >
               <i class="fa-brands fa-get-pocket"></i>
             </a>
@@ -126,6 +130,7 @@ const {
             <a href="/feed.xml"
               target="_blank"
               rel="noopener noreferrer"
+              aria-label="RSS feed"
             >
               <i class="fa-solid fa-rss"></i>
             </a>
@@ -142,6 +147,7 @@ const {
             data-show-count="false"
             target="_blank"
             rel="noopener noreferrer"
+            aria-label="Twitter"
           >
             <i class="fab fa-twitter"></i>
           </a>
@@ -152,6 +158,7 @@ const {
             class="facebook_button"
             target="_blank"
             rel="noopener noreferrer"
+            aria-label="Facebook"
           >
             <i class="fa-brands fa-facebook"></i>
           </a>
@@ -162,6 +169,7 @@ const {
             class="line_button"
             target="_blank"
             rel="noopener noreferrer"
+            aria-label="LINE"
           >
             <i class="fa-brands fa-line"></i>
           </a>
@@ -172,6 +180,7 @@ const {
             class="pocket_button"
             target="_blank"
             rel="noopener noreferrer"
+            aria-label="Pocket"
           >
             <i class="fa-brands fa-get-pocket"></i>
           </a>
@@ -179,7 +188,8 @@ const {
         <span class="rss">
           <a href="/feed.xml"
             target="_blank"
-              rel="noopener noreferrer"
+            rel="noopener noreferrer"
+            aria-label="RSS feed"
           >
             <i class="fa-solid fa-rss"></i>
           </a>
