rss feed test & add feedly button

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -132,6 +132,9 @@ const {
               <i class="fa-brands fa-get-pocket"></i>
             </a>
           </span>
+          <span class="feedly">
+            <a href='https://feedly.com/i/subscription/feed%2Fhttps%3A%2F%2Fwww.vermilion3.xyz%2Ffeed.xml'  target='blank'><img id='feedlyFollow' src='https://s1.feedly.com/legacy/feedly-follow-square-flat-green_2x.png' alt='follow us in feedly' width='28' height='28'></a>
+          </span>
           <span class="rss">
             <a
               href="/feed.xml"
@@ -200,6 +203,9 @@ const {
           >
             <i class="fa-brands fa-get-pocket"></i>
           </a>
+        </span>
+        <span class="feedly">
+          <a href='https://feedly.com/i/subscription/feed%2Fhttps%3A%2F%2Fwww.vermilion3.xyz%2Ffeed.xml'  target='blank'><img id='feedlyFollow' src='https://s1.feedly.com/legacy/feedly-follow-square-flat-green_2x.png' alt='follow us in feedly' width='28' height='28'></a>
         </span>
         <span class="rss">
           <a
