--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -3,12 +3,12 @@ import HeaderLink from "./HeaderLink.astro";
 import SearchForm from "./SearchForm.astro";
 import GoogleResponsiveAd from "./GoogleResponsiveAd";
 //microCMS呼び出し
-import { getCategories, getLinks } from "../library/microcms";
-const { contents: categories } = await getCategories({
+import { cmsBlog} from "../library/microcms";
+const { contents: categories } = await cmsBlog.getCategories({
   fields: ["id", "name"],
   orders: "name",
 });
-const { contents: links } = await getLinks({
+const { contents: links } = await cmsBlog.getLinks({
   fields: ["createdAt", "title", "url"],
   orders: "createdAt",
 });
