--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -10,12 +10,11 @@ import Pagination from "../components/Pagination.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
 //microCMS呼び出し
-import { getBlogs } from "../library/microcms";
+import { cmsBlog } from "../library/microcms";
 // const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
 
 export async function getStaticPaths({ paginate }: any) {
-  const { contents: posts } = await getBlogs({
-    fields: ["id", "title", "publishedAt", "content", "eyecatch", "category"],
+  const { contents: posts } = await cmsBlog.getBlogs({
     orders: "-publishedAt",
   });
   // 記事の配列から、1ページに10個づつ入るようにページを生成する
