--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -70,10 +70,7 @@ const {
 <meta property="twitter:image" content={image + '?fit=crop&crop=top&w=720&h=360'} />
 
 <!-- font awesome -->
-<style>.fa-brands,.fab{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:var(--fa-display,inline-block);font-style:normal;font-variant:normal;line-height:1;text-rendering:auto}.fa-brands,.fab{font-family:"Font Awesome 6 Brands"}</style>
-<style>:host,:root{--fa-style-family-brands:"Font Awesome 6 Brands";--fa-font-brands:normal 400 1em/1 "Font Awesome 6 Brands"}.fa-brands,.fab{font-weight:400}.fa-facebook:before{content:"\f09a"}.fa-line:before{content:"\f3c0"}.fa-get-pocket:before{content:"\f265"}.fa-twitter:before{content:"\f099"}</style>
-<!-- <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
-<link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/brands.min.css"> -->
+<link rel="preload" href="/fontawesome-free-6.3.0-web/css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preload" href="/fontawesome-free-6.3.0-web/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preload" href="/fontawesome-free-6.3.0-web/css/brands.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
