--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -142,12 +142,7 @@ const {
               rel="noopener noreferrer"
               aria-label="RSS feed"
             >
-              <img
-                src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
-                alt="RSS feed"
-                width="16px"
-                height="16px"
-              />
+              <i class="fa-sharp fa-solid fa-rss"></i>
             </a>
           </span>
         </div>
@@ -214,12 +209,7 @@ const {
             rel="noopener noreferrer"
             aria-label="RSS feed"
           >
-            <img
-              src="https://images.microcms-assets.io/assets/8026aec5aaba42abb48e90c99ce4967d/d9257bd33e1a4538a525d9575fd09368/rss_feed.svg"
-              alt="RSS feed"
-              width="16px"
-              height="16px"
-            />
+            <i class="fa-sharp fa-solid fa-rss"></i>
           </a>
         </span>
         <nav class="newer_home_older">
