--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -119,7 +119,13 @@ const { contents: links } = await cmsBlog.getLinks({
           {
             links.map((link: any) => (
               <li>
-                <HeaderLink href={link.url}>{link.title}</HeaderLink>
+                <HeaderLink
+                  href={link.url}
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  {link.title}
+                </HeaderLink>
               </li>
             ))
           }
