--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -27,7 +27,8 @@ const posts = await cmsBlog.getBlogs({
   orders: "-publishedAt",
 });
 
-const content = processer(blog.content, { img: { parameters: { fm: "webp", fit:"clip", w:700, h:700 } } });
+// const content = processer(blog.content, { img: { parameters: { fm: "webp", fit:"clip", w:700, h:700 } } });
+const content = blog.content;
 const table_of_content = createTableOfContents(blog.content,{ tags: "h1,h2,h3,h4,h5" });
 
 // 現在の記事のpostsの中でのindex番号を取得
