--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,41 +34,13 @@ const {
 <!-- End Google Tag Manager -->
 
 <!-- New GTM Test -->
-<script>
-	const searchParams = new URL(window.location.href);
-	const isDebug = searchParams.searchParams.get('gtm_debug');
+<script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=YOUR-ID-HERE"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	const scripts = [
-		{
-			src: 'https://www.googletagmanager.com/gtm.js?id=google-tag-id',
-			text: null,
-		},
-		{
-			src: null,
-			text: `
-      window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
-    gtag('js', new Date());
-    gtag('config', 'GTM-WM9326C');
-      `,
-		},
-	];
-
-	function injectScripts() {
-		scripts.forEach((s) => {
-			const script = document.createElement('script');
-			script.type = isDebug ? 'text/javascript' : 'text/partytown';
-
-			if (s.src) script.src = s.src;
-			if (s.text) script.text = s.text;
-			document.head.appendChild(script);
-		});
-	}
-
-	injectScripts();
+  gtag('config', 'GTM-WM9326C');
 </script>
 <!-- End of New GTM Test -->
 
